fix: force dark mode

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -3,7 +3,7 @@
     font-weight: normal;
     font-style: normal;
     src: url('../assets/fonts/Streamster.woff2') format('woff2');
-    font-display: swap;
+    font-display: block;
 }
 
 body {
